k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-2
  name: api-2-svc
  namespace: lab
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 5000
  selector:
    app: api-2
  type: ClusterIP
